fix: responsive layout problem on userless session

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,7 @@
     border-radius: inherit;
   }
 }
+
+body {
+  overflow-x: hidden;
+}
